Fix the scale swagger description
