# src/docs/swagger.yaml
@@ -110,7 +110,7 @@ paths:
       tags:
       - Process
   /process/scale/{name}/{scale}:
-    post:
+    patch:
       description: Scale a process
       parameters:
       - description: Process Name
@@ -118,6 +118,11 @@ paths:
         name: name
         required: true
         type: string
+      - description: New amount of process replicas
+        in: path
+        name: scale
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
